// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Mock render - colors - value[0] - CompactColorSelector 1`] = `
Array [
  Array [
    Object {
      "className": "{\\"style\\":[{\\"marginBottom\\":\\"0px !important\\"},null]}",
      "color": "#000000",
      "colors": Array [
        "#123456",
        "#abc345",
      ],
      "id": "colors_input",
      "onChangeComplete": [Function],
    },
    Object {},
  ],
]
`;

exports[`Mock render - default - value[0] - CompactColorSelector 1`] = `
Array [
  Array [
    Object {
      "className": "{\\"style\\":[{\\"marginBottom\\":\\"0px !important\\"},null]}",
      "color": "#000000",
      "colors": undefined,
      "id": "default_input",
      "onChangeComplete": [Function],
    },
    Object {},
  ],
]
`;

exports[`Mock render - defaultColor - value[0] - CompactColorSelector 1`] = `
Array [
  Array [
    Object {
      "className": "{\\"style\\":[{\\"marginBottom\\":\\"0px !important\\"},null]}",
      "color": "#FF0000",
      "colors": undefined,
      "id": "defaultColor_input",
      "onChangeComplete": [Function],
    },
    Object {},
  ],
]
`;

exports[`Mock render - inputStyle - value[0] - CompactColorSelector 1`] = `
Array [
  Array [
    Object {
      "className": "{\\"style\\":[{\\"marginBottom\\":\\"0px !important\\"},{\\"border\\":\\"3px solid blue\\"}]}",
      "color": "#000000",
      "colors": undefined,
      "id": "inputStyle_input",
      "onChangeComplete": [Function],
    },
    Object {},
  ],
]
`;

exports[`Mock render - label-disabled - value[0] - CompactColorSelector 1`] = `
Array [
  Array [
    Object {
      "className": "{\\"style\\":[{\\"marginBottom\\":\\"0px !important\\"},null]}",
      "color": "#000000",
      "colors": undefined,
      "id": "label-disabled_input",
      "onChangeComplete": [Function],
    },
    Object {},
  ],
]
`;

exports[`Mock render - title - value[0] - CompactColorSelector 1`] = `
Array [
  Array [
    Object {
      "className": "{\\"style\\":[{\\"marginBottom\\":\\"0px !important\\"},null]}",
      "color": "#000000",
      "colors": undefined,
      "id": "title_input",
      "onChangeComplete": [Function],
    },
    Object {},
  ],
]
`;
